# codeit_3rd_project

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  app.py  config.py  config.yaml  docker-compose.yml  downloader.py  fastapi_main.py  fonts.py  generate.py  main.py  main_pipeline.py  model_dev_test.ipynb  models.py  package-lock.json  prompts.py  readme.md  refined_omnigen2.ipynb  requirements.txt  run_temp.py  test.ipynb  test_main.py
.streamlit/: config.toml
backend/: Dockerfile  main.py  package-lock.json  pyproject.toml  requirements.txt  백엔드 FastAPI 구성 개요.md
backend-model-edit/: README.md  __init__.py  fastapi_main.py  requirements.txt
backend/app/: cache.py  main.py
backend/app/routers/: TI.py  advertisement_router.py  authentication_router.py  cache.py  image.py  session_router.py  text.py  user_router.py
backend/app/services/: image_main.py  model_config.yaml  text_main.py
backend/app/services/TI_modules/: TI_config.py  TI_models.py  TI_schemas.py  font_downloader.py
backend/app/services/image_modules/: ad_generator.py  evaluation.py  gpt_module.py  pipeline_utils.py  utils.py
backend/app/services/text_modules/: fonts.py  text_generator.py  text_models.py  text_prompts.py
backend/crud/: advertisement_crud.py  session_crud.py  user_crud.py
backend/database/: connection.py  models.py
backend/routers/: gallery.py  generate.py
backend/schemas/: advertisement_schema.py  session_schema.py  user_schema.py
backend/utils/: security.py  sha_save_image.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
(+141 files in other folders)
