[project]
name = "project-dir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "accelerate>=1.8.1",
    "bitsandbytes>=0.46.1",
    "diffusers>=0.34.0",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "fastapi>=0.116.1",
    "googlesearch-python>=1.3.0",
    "ip-adapter>=0.1.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "ninja>=1.11.1.4",
    "omegaconf>=2.3.0",
    "onnxruntime>=1.22.0",
    "openai>=1.93.1",
    "opencv-python>=4.12.0.88",
    "optimum[onnxruntime]>=1.17.1",
    "peft>=0.16.0",
    "python-multipart>=0.0.20",
    "rembg>=2.0.67",
    "safetensors>=0.5.3",
    "sentencepiece>=0.2.0",
    "simple-aesthetics-predictor>=0.1.2",
    "streamlit>=1.46.1",
    "timm>=1.0.16",
    "torchvision>=0.22.1",
    "transformers>=4.53.1",
    "uvicorn>=0.35.0",
    "wandb>=0.21.0",
    "wheel>=0.45.1",
    "xformers>=0.0.31",
]